# analyse-et-synthese-d-image

./: .gitignore
analyse/: Pipfile  main.py  readme.md
synthese/: .gitignore  CMakeLists.txt  README.md
synthese/include/customs/: Utils.h
synthese/include/customs/drawables/: Box.h  Drawable.h  Panel.h  Plan.h  Sphere.h
synthese/include/customs/rendering/: Hit.h  Light.h  LightPanel.h  Line.h  Renderer.h
synthese/include/customs/scenes/: Scene1.h
synthese/lib/Google_tests/: CMakeLists.txt
synthese/lib/Google_tests/lib/: .gitignore  README.md
synthese/lib/Google_tests/lib/googletest/cmake/: internal_utils.cmake
synthese/lib/Google_tests/lib/googletest/include/gtest/: gtest.h
synthese/lib/Google_tests/tests/: PlanTest.cpp  SphereTest.cpp
synthese/projets/: main.cpp
synthese/resize_script/: main.py
synthese/src/customs/: Utils.cpp
synthese/src/customs/drawables/: Box.cpp  Drawable.cpp  Panel.cpp  Plan.cpp  Sphere.cpp
synthese/src/customs/rendering/: Hit.cpp  Light.cpp  LightPanel.cpp  Line.cpp  Renderer.cpp
synthese/src/customs/scenes/: Scene1.cpp
synthese/src/gkit/: color.cpp  files.cpp  image_io.cpp  mat.cpp  mesh_io.cpp  vec.cpp
